# interior-designer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/interior_designer/: __init__.py  app.py  cli.py  config.py  pipeline.py  prompts.py
src/interior_designer/models/: __init__.py  schemas.py
src/interior_designer/services/: __init__.py  claude_code.py  image_gen.py
src/interior_designer/utils/: __init__.py  image.py  markdown.py  pdf.py
