[project]
name = "interior-designer"
version = "0.1.0"
description = "AI-powered interior design assistant using Claude Code and OpenRouter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "streamlit>=1.29",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interior_designer"]
